--- a/SQLiteTest/SQLiteTest.vcxproj.filters
+++ b/SQLiteTest/SQLiteTest.vcxproj.filters
@@ -26,10 +26,13 @@
     <ClInclude Include="sqlite3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="data.hpp">
+    <ClInclude Include="manage.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="manage.hpp">
+    <ClInclude Include="item.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="error.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
