--- a/SQLiteTest/SQLiteTest.vcxproj.filters
+++ b/SQLiteTest/SQLiteTest.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="order.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
