following function passed tests: add_order(), exist(), get_order()

--- a/SQLiteTest/SQLiteTest.vcxproj.filters
+++ b/SQLiteTest/SQLiteTest.vcxproj.filters
@@ -42,12 +42,15 @@
     <ClCompile Include="order_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="warehouse_exception.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="item.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="error.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="storage.hpp">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="warehouse_exception.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
