--- a/SQLiteTest/SQLiteTest.vcxproj
+++ b/SQLiteTest/SQLiteTest.vcxproj
@@ -151,13 +151,15 @@
   <ItemGroup>
     <ClCompile Include="database.cpp" />
     <ClCompile Include="item_manager.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="order_manager.cpp" />
     <ClCompile Include="sqlite3.c" />
     <ClCompile Include="storage.cpp" />
+    <ClCompile Include="warehouse_exception.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="database.hpp" />
-    <ClInclude Include="error.hpp" />
+    <ClInclude Include="warehouse_exception.hpp" />
     <ClInclude Include="item.hpp" />
     <ClInclude Include="item_manager.hpp" />
     <ClInclude Include="manager.hpp" />
