--- a/SQLiteTest/SQLiteTest.vcxproj.filters
+++ b/SQLiteTest/SQLiteTest.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="personnel_manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="job.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
