--- a/warehouse_test/warehouse_test.vcxproj
+++ b/warehouse_test/warehouse_test.vcxproj
@@ -91,7 +91,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>..\SQLiteTest\Debug\sqlite3.obj;..\SQLiteTest\Debug\warehouse_exception.obj;..\SQLiteTest\Debug\database.obj;..\SQLiteTest\Debug\item_manager.obj;..\SQLiteTest\Debug\order_manager.obj;..\SQLiteTest\Debug\storage.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\SQLiteTest\Debug\database.obj;..\SQLiteTest\Debug\item_manager.obj;..\SQLiteTest\Debug\manager.obj;..\SQLiteTest\Debug\order_manager.obj;..\SQLiteTest\Debug\personnel_manager.obj;..\SQLiteTest\Debug\storage.obj;..\SQLiteTest\Debug\sqlite3.obj;..\SQLiteTest\Debug\warehouse_exception.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -141,11 +141,13 @@
   <ItemGroup>
     <ClInclude Include="manage_test.hpp" />
     <ClInclude Include="order_test.hpp" />
+    <ClInclude Include="pers_test.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manage_test.cpp" />
     <ClCompile Include="order_test.cpp" />
+    <ClCompile Include="pers_test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
