--- a/warehouse_test/warehouse_test.vcxproj.filters
+++ b/warehouse_test/warehouse_test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="order_test.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pers_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="order_test.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pers_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
