--- a/SQLiteTest/SQLiteTest.vcxproj.filters
+++ b/SQLiteTest/SQLiteTest.vcxproj.filters
@@ -13,12 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\sqlite">
-      <UniqueIdentifier>{7052111d-8a9e-40c5-8c1f-8f90476ba403}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\sqlite">
-      <UniqueIdentifier>{57feb4fa-9f11-4cf8-8695-da8be5609305}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="storage.cpp">
@@ -29,9 +23,6 @@
     </ClCompile>
     <ClCompile Include="item_manager.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="sqlite3.c">
-      <Filter>Source Files\sqlite</Filter>
     </ClCompile>
     <ClCompile Include="order_manager.cpp">
       <Filter>Source Files</Filter>
@@ -68,9 +59,6 @@
     <ClInclude Include="order_manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="sqlite3.h">
-      <Filter>Header Files\sqlite</Filter>
-    </ClInclude>
     <ClInclude Include="order.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -89,7 +77,7 @@
     <ClInclude Include="personnel_manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="job.hpp">
+    <ClInclude Include="task.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
