check_inventory() compiled

--- a/SQLiteTest/SQLiteTest.vcxproj
+++ b/SQLiteTest/SQLiteTest.vcxproj
@@ -151,6 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="database.cpp" />
+    <ClCompile Include="item.cpp" />
     <ClCompile Include="item_manager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
